added links to all htmls files

--- a/advice/health-tips.html
+++ b/advice/health-tips.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882">
+<html lang="en" ">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,23 +28,30 @@
 <body>
 <h1>Runners Home</h1>
 <div>
-  Home | Resources | Calculator | Running Log | Running Terms |
-  Links | Running Advice | Races | Register
+  <a href="../index.html">Home</a> |
+  <a href="../resources/index.html">Resources</a> |
+  <a href="../resources/calculator.html">Calculator</a> |
+  <a href="../resources/run-log.html">Running Log</a> |
+  <a href="../resources/terms.html">Running Terms</a> |
+  <a href="../resources/links.html">Links</a> |
+  <a href="../advice/index.html">Running Advice</a> |
+  <a href="../races.html">Races</a> |
+  <a href="../register.html">Register</a> |
 </div>
 <h2>Health Tips</h2>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
   Aliquam et gravida sapien, facilisis condimentum arcu. 
   Morbi eget dui iaculis, porttitor eros et, tincidunt erat...</p>
 <!-- The text below should link to the Running Advice index page-->
-<p>More Advice Articles</p>
+<p><a href="./index.html">More Advice Articles</a></p>
 <p><small>Disclosure: This is not a real website.</small></p>
 <hr>
 <p>&copy; 2022 Runners Home. All rights reserved.</p>
 <div>
-  info@runners-home.com |
-  Facebook |
-  LinkedIn |
-  Twitter
+  <a href="malito:info@runners-home.com">info@runners-home.com</a> |
+  <a href="https://www.facebook.com/webucator">Facebook</a> |
+  <a href="https://www.linkedin.com/companies/webucator">LinkedIn</a> |
+  <a href="https://twitter.com/webucator">Twitter</a>
 </div>
 </body>
 </html>
