--- a/resources/links.html
+++ b/resources/links.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,14 +28,21 @@
 <body>
 <h1>Runners Home</h1>
 <div>
-  Home | Resources | Calculator | Running Log | Running Terms |
-  Links | Running Advice | Races | Register
+  <a href="../index.html">Home</a> |
+  <a href="./index.html">Resources</a> |
+  <a href="./calculator.html">Calculator</a> |
+  <a href="./run-log.html">Running Log</a> |
+  <a href="./terms.html">Running Terms</a> |
+  <a href="./links.html">Links</a> |
+  <a href="../advice/index.html">Running Advice</a> |
+  <a href="../races.html">Races</a> |
+  <a href="../register.html">Register</a> |
 </div>
 <h2>Useful Links</h2>
 <div>
-  - Map My Run <!-- Should link to https://www.mapmyrun.com/ --><br>
-  - Runners World <!-- Should link to https://www.runnersworld.com --><br>
-  - Strength Running <!-- Should link to https://strengthrunning.com/ -->
+  - <a href="https://www.mapmyrun.com">Map My Run</a> <!-- Should link to https://www.mapmyrun.com/ --><br>
+  - <a href="https://www.runnersworld.com">Runners World</a> <!-- Should link to https://www.runnersworld.com --><br>
+  - <a href="https://strengthrunning.com">Strength Running</a> <!-- Should link to https://strengthrunning.com/ -->
   <!-- Add any additional running links you like. -->
 </div>
 <!-- The text below should link to the Resources index page-->
@@ -44,10 +51,10 @@
 <hr>
 <p>&copy; 2022 Runners Home. All rights reserved.</p>
 <div>
-  info@runners-home.com |
-  Facebook |
-  LinkedIn |
-  Twitter
+  <a href="malito:info@runners-home.com">info@runners-home.com</a> |
+  <a href="https://www.facebook.com/webucator">Facebook</a> |
+  <a href="https://www.linkedin.com/companies/webucator">LinkedIn</a> |
+  <a href="https://twitter.com/webucator">Twitter</a>
 </div>
 </body>
 </html>
