--- a/resources/index.html
+++ b/resources/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:mso="urn:schemas-microsoft-com:office:office" xmlns:msdt="uuid:C2F41010-65B3-11d1-A29F-00AA00C14882">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,24 +28,31 @@
 <body>
 <h1>Runners Home</h1>
 <div>
-  Home | Resources | Calculator | Running Log | Running Terms |
-  Links | Running Advice | Races | Register
+  <a href="../index.html">Home</a> |
+  <a href="./index.html">Resources</a> |
+  <a href="./calculator.html">Calculator</a> |
+  <a href="./run-log.html">Running Log</a> |
+  <a href="./terms.html">Running Terms</a> |
+  <a href="./links.html">Links</a> |
+  <a href="../advice/index.html">Running Advice</a> |
+  <a href="../races.html">Races</a> |
+  <a href="../register.html">Register</a> |
 </div>
 <h2>Resources</h2>
 <div>
-  - Calculator <!-- Should link to Calculator page--><br>
-  - Running Log <!-- Should link to Running Log page--><br>
-  - Running Terms <!-- Should link to Running Terms page--><br>
-  - Links <!-- Should link to Links page-->
+  - <a href="./calculator.html">Calculator</a> <!-- Should link to Calculator page--><br>
+  - <a href="./run-log.html">Running Log</a> <!-- Should link to Running Log page--><br>
+  - <a href="./terms.html">Running Terms</a> <!-- Should link to Running Terms page--><br>
+  - <a href="./links.html">Links</a> <!-- Should link to Links page-->
 </div>
 <p><small>Disclosure: This is not a real website.</small></p>
 <hr>
 <p>&copy; 2022 Runners Home. All rights reserved.</p>
 <div>
-  info@runners-home.com |
-  Facebook |
-  LinkedIn |
-  Twitter
+  <a href="malito:info@runners-home.com">info@runners-home.com</a> |
+  <a href="https://www.facebook.com/webucator">Facebook</a> |
+  <a href="https://www.linkedin.com/companies/webucator">LinkedIn</a> |
+  <a href="https://twitter.com/webucator">Twitter</a>
 </div>
 </body>
 </html>
