fixed errors on links html

--- a/resources/links.html
+++ b/resources/links.html
@@ -46,7 +46,7 @@
   <!-- Add any additional running links you like. -->
 </div>
 <!-- The text below should link to the Resources index page-->
-<p>More Resources</p>
+<p><a href="index.html">More Resources</a></p>
 <p><small>Disclosure: This is not a real website.</small></p>
 <hr>
 <p>&copy; 2022 Runners Home. All rights reserved.</p>
